feat: build with setuptools added, pre-commit added and  better code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
-__pycache__
-.pytest_cache
-venv
+# Caches de Python
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Entornos virtuales
+venv/
+.env/
+
+# Cache de linters/test
+.ruff_cache/
+.pytest_cache/
+
+# Archivos de build/packaging
+*.egg-info/
+dist/
+build/
+
+# Archivos de logs temporales
+*.log
+
+# Configuración de IDEs (opcional pero recomendable)
+.vscode/
+.idea/
